1st version 0.0.0-beta - Good main title of the doc

--- a/factory/00-intro/01-intro[fr].tex
+++ b/factory/00-intro/01-intro[fr].tex
@@ -10,6 +10,6 @@
 
 \section{Introduction}
 
-Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probailités.
+Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités.
 
 \end{document}
