--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -159,7 +159,7 @@
 \makeatother % Technical doc - END
 
 
-\usepackage{ tnsproba }
+\usepackage{tnsproba}
 
 
 \begin{document}
@@ -167,13 +167,13 @@
 \renewcommand\labelitemi{\raisebox{0.125em}{\tiny\textbullet}}
 \renewcommand{\labelitemii}{---}
 
-\title{   %
-	Le package \texttt{ tnsproba }\\%
-	{\footnotesize Code source disponible sur \url{ https://github.com/typensee-latex/tnstools.git }.}\\%
+\title{  %
+	Le package \texttt{tnsproba}\\%
+	{\footnotesize Code source disponible sur \url{https://github.com/typensee-latex/tnsproba.git}.}\\%
 {\footnotesize Version \texttt{0.0.0-beta} développée et testée sur \macosxname{}.}%
 }
 \author{Christophe BAL}
-\date{2020-07-10}{{{
+\date{2020-07-10}
 
 \maketitle
 
@@ -192,7 +192,7 @@
 
 \section{Introduction}
 
-Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probailités.
+Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités.
 \section{Probabilité}
 
 \subsection{Probabilité \og simple \fg}
