Little amelioration of the doc

--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -285,7 +285,7 @@ $\expval[E_1]{X}$
 
 \subsection{Que se passe-t-il en coulisse ?}
 
-Le gros du travail est fait par le package \verb+forest+ qui utilise \verb+TiKz+. Ceci permet de faire des choses sympathiques comme dans le 2\ieme{} exemple ci-dessous.
+Le gros du travail est fait par le package \verb+forest+ qui utilise \verb+TiKz+. On peut donc faire appel à la machinerie de ce dernier et obtenir des choses sympathiques comme nous allons le voir ci-dessous.
 
 
 % ---------------------- %
