Technical infos : starting to do more serious things...

--- a/factory/01-base/01-base[fr].tex
+++ b/factory/01-base/01-base[fr].tex
@@ -118,7 +118,7 @@ Le suffixe \prefix{exp} est pour \whyprefix{exp}{and} soit \inenglish{développe
 
 \subsection{Espérance}
 
-\newparaexample*{}
+\newparaexample{}
 
 \prefix{expval} vient de \whyprefix{exp}{ected} \whyprefix{val}{ue} soit \inenglish{espérance}.
 \begin{latexex}
@@ -129,7 +129,7 @@ $\expval{X}$
 % ---------------------- %
 
 
-\paragraph{Choisir le nom de l'espérance}
+\newparaexample{Choisir le nom de l'espérance}
 
 \begin{latexex}
 $\expval[E_1]{X}$
