--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -262,7 +262,7 @@ Le suffixe \prefix{exp} est pour \whyprefix{exp}{and} soit \inenglish{développe
 
 \subsection{Espérance}
 
-\newparaexample*{}
+\newparaexample{}
 
 \prefix{expval} vient de \whyprefix{exp}{ected} \whyprefix{val}{ue} soit \inenglish{espérance}.
 \begin{latexex}
@@ -273,7 +273,7 @@ $\expval{X}$
 % ---------------------- %
 
 
-\paragraph{Choisir le nom de l'espérance}
+\newparaexample{Choisir le nom de l'espérance}
 
 \begin{latexex}
 $\expval[E_1]{X}$
@@ -507,7 +507,7 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 \newpage
 \section{Toutes les fiches techniques} \label{techincal-ids}
 
-
+\subsection{Introduction}
 \subsection{Probabilité}
 
 \subsubsection{Probabilité \og simple \fg}
@@ -571,6 +571,6 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 \IDkey{bpweight} pour écrire un poids en-dessous du milieu d'une branche.
 
 \IDkey{frame} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
-
+\newpage
 
 \end{document}
