Starting use of dev branch

--- a/factory/00-intro/01-intro[fr].tex
+++ b/factory/00-intro/01-intro[fr].tex
@@ -10,6 +10,6 @@
 
 \section{Introduction}
 
-Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités.
+Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités. La saisie se veut sémantique et simple.
 
 \end{document}
