--- a/factory/config/doc[fr].tex
+++ b/factory/config/doc[fr].tex
@@ -17,7 +17,8 @@
 \renewcommand{\labelitemii}{---}
 
 \title{  %
-	Le package \texttt{tnsproba}\\%
+	Le package \texttt{tnsproba}:\\%
+	parler des probabilités facilement\\%
 	{\footnotesize Code source disponible sur \url{https://github.com/typensee-latex/tnsproba.git}.}\\%
 {\footnotesize Version \texttt{0.0.0-beta} développée et testée sur \macosxname{}.}%
 }
