--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -168,7 +168,8 @@
 \renewcommand{\labelitemii}{---}
 
 \title{  %
-	Le package \texttt{tnsproba}\\%
+	Le package \texttt{tnsproba}:\\%
+	parler des probabilités facilement\\%
 	{\footnotesize Code source disponible sur \url{https://github.com/typensee-latex/tnsproba.git}.}\\%
 {\footnotesize Version \texttt{0.0.0-beta} développée et testée sur \macosxname{}.}%
 }
@@ -192,7 +193,7 @@
 
 \section{Introduction}
 
-Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités.
+Le package \verb+tnsproba+ propose des macros utiles quand l'on parle de probabilités. La saisie se veut sémantique et simple.
 \section{Probabilité}
 
 \subsection{Probabilité \og simple \fg}
