--- a/factory/01-base/01-base.sty
+++ b/factory/01-base/01-base.sty
@@ -22,30 +22,30 @@
 
 % Conditional probability
 
-\newcommand\@abstract@proba@cond[4]{%
+\newcommand\tnsproba@abstract@proba@cond[4]{%
     #1{\proba[#2]{#3 \cap #4}}{\proba[#2]{#4}}%
 }
 
 
-\newcommand\probacond{\@ifstar{\@probacond@star}{\@probacond@no@star}}
+\newcommand\probacond{\@ifstar{\tnsproba@proba@cond@star}{\tnsproba@proba@cond@no@star}}
 
-\newcommand\@probacond@no@star[3][p]{%
+\newcommand\tnsproba@proba@cond@no@star[3][p]{%
     \proba[#1_{#2}]{#3}%
 }
 
-\newcommand\@probacond@star[3][p]{%
+\newcommand\tnsproba@proba@cond@star[3][p]{%
     \proba[#1]{#3 \mid #2}%
 }
 
 
-\newcommand\probacondexp{\@ifstar{\@probacondexp@star}{\@probacondexp@no@star}}
+\newcommand\probacondexp{\@ifstar{\tnsproba@proba@cond@exp@star}{\tnsproba@proba@cond@exp@no@star}}
 
-\newcommand\@probacondexp@star[3][p]{%
-    \@abstract@proba@cond{\frac}{#1}{#3}{#2}
+\newcommand\tnsproba@proba@cond@exp@star[3][p]{%
+    \tnsproba@abstract@proba@cond{\frac}{#1}{#3}{#2}
 }
 
-\newcommand\@probacondexp@no@star[3][p]{%
-    \@abstract@proba@cond{\dfrac}{#1}{#3}{#2}
+\newcommand\tnsproba@proba@cond@exp@no@star[3][p]{%
+    \tnsproba@abstract@proba@cond{\dfrac}{#1}{#3}{#2}
 }
 
 
