--- a/tnsproba/tnsproba.sty
+++ b/tnsproba/tnsproba.sty
@@ -32,30 +32,30 @@
 
 % Conditional probability
 
-\newcommand\@abstract@proba@cond[4]{%
+\newcommand\tnsproba@abstract@proba@cond[4]{%
     #1{\proba[#2]{#3 \cap #4}}{\proba[#2]{#4}}%
 }
 
 
-\newcommand\probacond{\@ifstar{\@probacond@star}{\@probacond@no@star}}
+\newcommand\probacond{\@ifstar{\tnsproba@proba@cond@star}{\tnsproba@proba@cond@no@star}}
 
-\newcommand\@probacond@no@star[3][p]{%
+\newcommand\tnsproba@proba@cond@no@star[3][p]{%
     \proba[#1_{#2}]{#3}%
 }
 
-\newcommand\@probacond@star[3][p]{%
+\newcommand\tnsproba@proba@cond@star[3][p]{%
     \proba[#1]{#3 \mid #2}%
 }
 
 
-\newcommand\probacondexp{\@ifstar{\@probacondexp@star}{\@probacondexp@no@star}}
+\newcommand\probacondexp{\@ifstar{\tnsproba@proba@cond@exp@star}{\tnsproba@proba@cond@exp@no@star}}
 
-\newcommand\@probacondexp@star[3][p]{%
-    \@abstract@proba@cond{\frac}{#1}{#3}{#2}
+\newcommand\tnsproba@proba@cond@exp@star[3][p]{%
+    \tnsproba@abstract@proba@cond{\frac}{#1}{#3}{#2}
 }
 
-\newcommand\@probacondexp@no@star[3][p]{%
-    \@abstract@proba@cond{\dfrac}{#1}{#3}{#2}
+\newcommand\tnsproba@proba@cond@exp@no@star[3][p]{%
+    \tnsproba@abstract@proba@cond{\dfrac}{#1}{#3}{#2}
 }
 
 
@@ -83,7 +83,7 @@
 %    * ???? (all settings)
 %    * https://tex.stackexchange.com/a/511763/6880 (hide/show the weights)
 
-\newcommand\@proba@tree[1]{
+\newcommand\tnsproba@tree[1]{
     \begin{forest}
         for tree = {%
             sn edges,
@@ -144,7 +144,7 @@
 
 % Source: https://stackoverflow.com/a/1873617/4589608
 \newenvironment{probatree}{\startprobatree}{}
-\def\startprobatree#1\end{\@proba@tree{#1}\end}
+\def\startprobatree#1\end{\tnsproba@tree{#1}\end}
 
 \newenvironment{probatree*}{
     \forestset{pweight/.style={}}
