Better builder for tech but still not the best

--- a/factory/01-base/01-base[fr].tex
+++ b/factory/01-base/01-base[fr].tex
@@ -34,9 +34,7 @@ $\proba[P]{A}$
 % ---------------------- %
 
 
-\subsubsection{Fiches techniques}
-
-\paragraph{Probabilité \og simple \fg}
+\subsection{Fiches techniques}
 
 \IDmacro{proba}{1}{1}
 
@@ -91,13 +89,11 @@ Le suffixe \prefix{exp} est pour \whyprefix{exp}{and} soit \inenglish{développe
 % ---------------------- %
 
 
-\subsubsection{Fiches techniques}
+\subsection{Fiches techniques}
 
-\paragraph{Probabilité conditionnelle}
+\IDmacro{probacond   }{1}{2}
 
-\IDmacro{probacond}{1}{2}
-
-\IDmacro{probacond*}{1}{2}
+\IDmacro{probacond*  }{1}{2}
 
 \extraspace
 
@@ -139,9 +135,7 @@ $\expval[E_1]{X}$
 % ---------------------- %
 
 
-\subsubsection{Fiches techniques}
-
-\paragraph{Probabilité -- Espérance}
+\subsection{Fiches techniques}
 
 \IDmacro{expval}{1}{1}
 
