--- a/factory/02-tree/01-tree[fr].tex
+++ b/factory/02-tree/01-tree[fr].tex
@@ -215,17 +215,15 @@ En utilisant la machinerie de \verb+TiKz+ il est facile de décorer un arbre de 
 % ---------------------- %
 
 
-\subsubsection{Fiches techniques}
+\section{Fiches techniques}
 
-\paragraph{Probabilité -- Arbres pondérés}
-
-\IDenv*{probatree}
+\IDenv*{probatree }
 
 \IDenv*{probatree*}
 
 \Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb+forest+.
 
-\IDkey{pweight} pour écrire un poids sur le milieu d'une branche.
+\IDkey{pweight } pour écrire un poids sur le milieu d'une branche.
 
 \IDkey{apweight} pour écrire un poids au-dessus le milieu d'une branche.
 
