--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -49,6 +49,16 @@
 	listing side text
 }
 
+\newtcbinputlisting{\inputlatexex}[2][]{%
+	listing file={#2},%
+	sharp corners,%
+	left=1mm, right=1mm,%
+	bottom=1mm, top=1mm,%
+	colupper=red!75!blue,%
+	listing side text
+}
+
+
 \newtcblisting{latexex-flat}{%
 	sharp corners,%
 	left=1mm, right=1mm,%
@@ -56,12 +66,56 @@
 	colupper=red!75!blue,%
 }
 
+\newtcbinputlisting{\inputlatexexflat}[2][]{%
+	listing file={#2},%
+	sharp corners,%
+	left=1mm, right=1mm,%
+	bottom=1mm, top=1mm,%
+	colupper=red!75!blue,%
+}
+
+
 \newtcblisting{latexex-alone}{%
 	sharp corners,%
 	left=1mm, right=1mm,%
 	bottom=1mm, top=1mm,%
 	colupper=red!75!blue,%
 	listing only
+}
+
+\newtcbinputlisting{\inputlatexexalone}[2][]{%
+	listing file={#2},%
+	sharp corners,%
+	left=1mm, right=1mm,%
+	bottom=1mm, top=1mm,%
+	colupper=red!75!blue,%
+	listing only
+}
+
+
+\newcommand\inputlatexexcodeafter[1]{%
+	\begin{center}
+		\input{#1}
+	\end{center}
+
+	\vspace{-.5em}
+	
+	Le rendu précédent a été obtenu via le code suivant.
+	
+	\inputlatexexalone{#1}
+}
+
+
+\newcommand\inputlatexexcodebefore[1]{%
+	\inputlatexexalone{#1}
+	\vspace{-.75em}
+	\begin{center}
+		\textit{\footnotesize Rendu du code précédent}
+		
+		\medskip
+		
+		\input{#1}
+	\end{center}
 }
 
 
@@ -508,10 +562,11 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 \newpage
 \section{Toutes les fiches techniques} \label{techincal-ids}
 
-\subsection{Introduction}
+
 \subsection{Probabilité}
 
 \subsubsection{Probabilité \og simple \fg}
+
 
 \IDmacro{proba}{1}{1}
 
@@ -523,12 +578,12 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % ---------------------- %
 
 
-
 \subsubsection{Probabilité conditionnelle}
 
-\IDmacro{probacond}{1}{2}
 
-\IDmacro{probacond*}{1}{2}
+\IDmacro{probacond   }{1}{2}
+
+\IDmacro{probacond*  }{1}{2}
 
 \extraspace
 
@@ -547,8 +602,8 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % ---------------------- %
 
 
+\subsubsection{Espérance}
 
-\subsubsection{Probabilité -- Espérance}
 
 \IDmacro{expval}{1}{1}
 
@@ -557,21 +612,20 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 \IDarg{} la variable aléatoire dont on veut calculer l'espérance.
 \subsection{Arbres pondérés}
 
-\subsubsection{Probabilité -- Arbres pondérés}
 
-\IDenv*{probatree}
+\IDenv*{probatree }
 
 \IDenv*{probatree*}
 
 \Content{} un arbre codé en utilisant la syntaxe supportée par le package \verb+forest+.
 
-\IDkey{pweight} pour écrire un poids sur le milieu d'une branche.
+\IDkey{pweight } pour écrire un poids sur le milieu d'une branche.
 
 \IDkey{apweight} pour écrire un poids au-dessus le milieu d'une branche.
 
 \IDkey{bpweight} pour écrire un poids en-dessous du milieu d'une branche.
 
 \IDkey{frame} pour encadrer un sous-arbre depuis un noeud vers toutes les feuilles de celui-ci.
-\newpage
+
 
 \end{document}
