New minor version  0.1.0-beta: standard dev, var, contrary event

--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,34 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-07-22] Nouvelle version mineure \verb+0.1.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Probabilité conditionnelle}
+              \macro{probacondexp} renommée en  \macro{eprobacond}.
+    
+    % ------------------------ %
+    
+        \separation
+    
+        \item \topic*{Évènement contraire}
+              ajout de \macro{nevent}.
+    
+    % ------------------------ %
+    
+        \separation
+    
+        \item \topic*{variance et écart-type}
+              ajout de \macro{var} et \macro{stddev}.
+    
+    % ------------------------ %
+    
+        \separation
+    
+    \end{itemize}
+% ------------------------ %
+
+    \medskip
     \item[2020-07-10] Première version \verb+0.0.0-beta+.
 % ------------------------ %
 
