--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,17 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-07-23] Nouvelle version mineure \verb+0.2.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic*{Arbre}
+              ajout de la macro \macro{ptreeFrame} pour tracer facilement des sous cadres non \og finaux \fg.
+    
+        \separation
+    \end{itemize}
+% ------------------------ %
+
+    \medskip
     \item[2020-07-22] Nouvelle version mineure \verb+0.1.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
@@ -30,14 +41,10 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     
     % ------------------------ %
     
-        \separation
-    
         \item \topic*{Évènement contraire}
               ajout de \macro{nevent}.
     
     % ------------------------ %
-    
-        \separation
     
         \item \topic*{variance et écart-type}
               ajout de \macro{var} et \macro{stddev}.
