--- a/factory/02-tree/01-tree[fr].tex
+++ b/factory/02-tree/01-tree[fr].tex
@@ -242,7 +242,7 @@ Voici un exemple où la macro \macro{ptreeFrame} attend les noms de la racine et
 \separation
 
 
-\IDmacro{ptreeFrame}{1}{3}  où \quad \mwhyprefix{p}{robabilty}
+\IDmacro{ptreeFrame}{1}{3} \hfill \mwhyprefix{p}{robabilty}
 
 \IDoption{} la couleur au format TikZ. La valeur par défaut est \verb#blue#.
 
