Minor changes in the doc

--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -610,9 +610,9 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     \begin{itemize}[itemsep=.5em]
         \item \topic*{Arbre}
               ajout de la macro \macro{ptreeFrame} pour tracer facilement des sous cadres non \og finaux \fg.
-    \end{itemize}
     
-    \separation
+        \separation
+    \end{itemize}
 % ------------------------ %
 
     \medskip
@@ -671,15 +671,15 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 
 
 
-\IDmacro{probacond  }{1}{2}
+\IDmacro[2]{probacond}{1}{2}
 
-\IDmacro{probacond* }{1}{2}
+\IDmacro[1]{probacond*}{1}{2}
 
 \extraspace
 
-\IDmacro{eprobacond }{1}{2}
+\IDmacro[1]{eprobacond}{1}{2}
 
-\IDmacro{eprobacond*}{1}{2}
+\IDmacro   {eprobacond*}{1}{2}
 
 
 \IDoption{} le nom de la probabilité. La valeur par défaut est $p$.
