New minor vresion 0.3.0-beta - Comments for tree

--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -22,6 +22,21 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
 % Changes shown - START
 
     \medskip
+    \item[2020-07-25] Nouvelle version mineure \verb+0.3.0-beta+.
+    
+    \begin{itemize}[itemsep=.5em]
+        \item \topic{Arbre}
+        \begin{itemize}[itemsep=.5em]
+            \item Ajout du style \prefix{pcomment} pour placer du texte à la droite d'une feuille.
+    
+            \item Le style \prefix{frame} a été renommé \prefix{pframe}.
+        \end{itemize}
+    
+        \separation
+    \end{itemize}
+% ------------------------ %
+
+    \medskip
     \item[2020-07-23] Nouvelle version mineure \verb+0.2.0-beta+.
     
     \begin{itemize}[itemsep=.5em]
