--- a/factory/99-major-change-log/last-model-nodoc[fr].tex
+++ b/factory/99-major-change-log/last-model-nodoc[fr].tex
@@ -1,8 +1,19 @@
-Nouvelle version mineure \verb+0.2.0-beta+.
+Nouvelle version mineure \verb+1.2.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
-    \item \topic*{Arbre}
-          ajout de la macro \macro{ptreeFrame} pour tracer facilement des sous cadres non \og finaux \fg.
+    \item \topic{???}
+    \begin{itemize}[itemsep=.5em]
+        \item ???
+
+              \smallskip
+
+              ???
+    \end{itemize}
+
+
+
+% ------------------------ %
+
 
     \separation
 \end{itemize}
